documentation: add licence and email in pubspec

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: au10tix_flutter
-description: A new flutter plugin project.
+description: A new flutter plugin for adding native Au10tix SDK.
 version: 0.0.1
-author:
-homepage:
+author: Brenda Saavedra <brenda.saavedra@fondeadora.com>
+homepage: https://github.com/Fondeadora/au10tix-flutter
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
