--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,8 +9,10 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:3.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        def nav_version = "2.3.0-alpha02"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
@@ -18,26 +20,64 @@ rootProject.allprojects {
     repositories {
         google()
         jcenter()
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
     compileSdkVersion 29
-
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 22
     }
     lintOptions {
         disable 'InvalidPackage'
     }
 }
 
+ext {
+    // Versions
+    navVersion = '2.3.2'
+    lifecycleVersion = '2.2.0'
+    camerax_version = '1.0.0-rc03'
+}
+
 dependencies {
+    implementation fileTree(include: '*.aar', dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //implementation files('libs/flutter.jar')
+    // Au10tix
+    //implementation(name:'core-release', ext:'aar')
+    //implementation(name:'FaceLiveness-release', ext:'aar')
+    //implementation(name:'SmartDocument-release', ext:'aar')
+    //implementation(name:'selfieModule-release', ext:'aar')
+
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
+    implementation "androidx.navigation:navigation-ui-ktx:$navVersion"
+
+    // CameraX View class
+    implementation "androidx.camera:camera-view:1.0.0-alpha22"
+    // CameraX Camera2 extensions
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    // CameraX Lifecycle library
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+
+    //MLKit
+    implementation 'com.google.android.gms:play-services-mlkit-face-detection:16.1.2'
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.1.2'
+
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
