--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.fondeadora.au10tix_flutter">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.fondeadora.au10tix_flutter">
+
+    <application>
+        <activity android:name=".Au10tixMainActivity"></activity>
+    </application>
+
 </manifest>
